--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <center>
-<img src="logo.jpg" style="width:80px">
+<img src="logo.jpg" style="width:80%">
 </center>
 </body>
 </html>
