--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!doctype HMTL>
 <html>
+  <head>
+    <style>
+      .vertical-center {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+      }
+    </style>
+  </head>
 <body>
-<center>
-<img src="logo.jpg" style="width:80%">
-</center>
+  <center>
+    <div class="vertical-center">
+      <img src="logo.jpg" style="width:80%">
+    </div>
+  </center>
 </body>
 </html>
