--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       .vertical-center {
-        margin: 0;
+        margin: auto;
         position: absolute;
         top: 50%;
         -ms-transform: translateY(-50%);
@@ -14,7 +14,7 @@
 <body>
   <center>
     <div class="vertical-center">
-      <img src="logo.jpg" style="width:80%">
+      <img src="logo.jpg" style="max-width:60%">
     </div>
   </center>
 </body>
