--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype HMTL>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <style>
       .vertical-center {
         margin: auto;
@@ -15,6 +16,9 @@
   <center>
     <div class="vertical-center">
       <img src="logo.jpg" style="max-width:60%">
+      <div style="font-family: 'Open Sans', sans-serif;">
+        Coming soon...
+      </div>
     </div>
   </center>
 </body>
