--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <center>
     <div class="vertical-center">
       <img src="logo.jpg" style="max-width:60%">
-      <div style="font-family: 'Open Sans', sans-serif;">
+      <div style="font-family: 'Open Sans', sans-serif; font-size: 48px;">
         Coming soon...
       </div>
     </div>
