--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <style>
-      .vertical-center {
-        margin: auto;
+      .parent {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+      .child {
         position: absolute;
         top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     </style>
   </head>
 <body>
-  <div class="vertical-center">
-    <img src="logo.jpg" style="max-width:60%">
-    <div style="font-family: 'Open Sans', sans-serif; font-size: 32px;">
-      Coming soon...
+  <div class="parent">
+    <div class="child">
+      <img src="logo.jpg" style="max-width:60%">
+      <div style="font-family: 'Open Sans', sans-serif; font-size: 32px;">
+        Coming soon...
+      </div>
     </div>
   </div>
 </body>
