--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div class="parent">
     <div class="child">
       <img src="logo.jpg" style="max-width:60%">
-      <div style="font-family: 'Open Sans', sans-serif; font-size: 32px;">
-        Coming soon...
-      </div>
+      <center>
+        <span style="font-family: 'Open Sans', sans-serif; font-size: 32px;">Coming soon...</div>
+      </center>
     </div>
   </div>
 </body>
