--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
   <div class="parent">
     <div class="child">
-      <img src="logo.jpg" style="max-width:60%">
+      <center>
+        <img src="logo.jpg" style="max-width:70%">
+      </center>
       <center>
         <span style="font-family: 'Open Sans', sans-serif; font-size: 32px;">Coming soon...</div>
       </center>
